# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .gitpod.yml  .travis.yml  ApiAccess.py  Dockerfile  Dockerfile copy  Item.py  ItemsViewModel.py  PE2.txt  Pipfile  README  README.md  Secrets.enc  Setup.sh  Trello.py  Trello_boards.py  Trello_items.py  Vagrantfile  Vagrantfile.hyperv  app.py  app2.py  banana  card.py  classes.py  common.py  config.py  conftest.py  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  docker-flask-entrypoint.sh  docker_push  dockerfile  elf.items =items  feature.txt  flask_config.py  gunicorn.conf.py  (+53 more)
todo_app/: .env.test  Mongo_db.py  Mongo_items.py  Task.py  Trello_items.py  __init__.py  abc.py  app.py  app_config.py  card.py  deploy.sh  flask_config.py  gunicorn.conf.py  hypothesistest.py  item.py  items.py  mongo_config.py  mongo_db_tasks.py  mongo_repository.py  my-function.py  poetry.toml  pyproject.toml  requirements-frozen.txt  requirements.txt  selenuim_driver.py  selenuim_test  session_items.py  setup.sh  tempCodeRunnerFile.py  test sections.py  test_Newviewmodel.py  test_Todo.py  test_app.py  test_board.py  test_client.py  test_get_items.py  test_integration.py  test_system.py  test_tasks.py  test_unit.py  (+17 more)
todo_app/SeleniumTest/: config.py
todo_app/classes/: objects.py  trello.py
todo_app/data/: classes.py  get_items.py  item.py  session_items.py  test1.py  todo_item.py  trello.py  trelloList.py  trello_constants.py  trello_items.py
todo_app/diagrams/: component_diagram.drawio  container_diagram-without_docker.drawio  container_diagram.drawio  container_diagram_with_docker.drawio  context_diagram.drawio
todo_app/index/: __init__.py  objects.py  trello.py  views.py
todo_app/inputs/: data.py
todo_app/models/: view_model.py
todo_app/static/: style.css  todos.js
todo_app/templates/: about.html  add_board.html  add_items.html  add_status.html  add_task.html  all_done_list.html  boardtasks.html  book_list.html  delete.html  doing_list.html  done_list.html  editCard.html  index.html  index_readonly.html  indexread.html  indexwrite.html  item.html  (+10 more)
(+140 files in other folders)
