[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
requests = "^2.24.0"
gunicorn = "^20.0.4"
watchdog = {extras = ["watchmount"], version = "^1.0.2"}
geckodriver-autoinstaller = "^0.1.0"
pymongo = {extras = ["srv"], version = "^3.11.3"}
oauthlib = "^3.1.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
pytest = "^6.1.2"
watchdog = {extras = ["watchmedo"], version = "^1.0.2"}
mongomock = "^3.22.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
